--- a/Akshara/destination/destination.html
+++ b/Akshara/destination/destination.html
@@ -22,7 +22,7 @@
             <div class="content">
                 <div class="name">Finland</div>
                 <div class="des">Finland, renowned for its stunning natural landscapes and vibrant culture, is a global leader in education, innovation, and sustainability.</div>
-                <a href="/Akshara/seemore/seemore.html"><button>See More</button></a>
+                <a href="https://deepuakd.github.io/test.io/Akshara/seemore/seemore.html"><button>See More</button></a>
                 
             </div>
         </div>
@@ -30,7 +30,7 @@
             <div class="content">
                 <div class="name">Switzerland</div>
                 <div class="des">Switzerland, famed for its majestic Alps and precision craftsmanship, excels in banking, chocolates, and a commitment to neutrality and high quality of life.</div>
-                <a href="/Akshara/seemore/seemore.html"><button>See More</button></a>
+                <a href="https://deepuakd.github.io/test.io/Akshara/seemore/seemore.html"><button>See More</button></a>
             </div>
         </div>
         <div class="item" style="background-image: url('img3.jpg');">
