--- a/Akshara/seemore/seemore.html
+++ b/Akshara/seemore/seemore.html
@@ -77,7 +77,7 @@
                     "Monuments stand tall, silent witnesses to history's grand narrative."
                     "In their shadow, stories of triumph and tribulation echo through the ages."
                 </p>
-                <button class="btn">See More</button>
+                <a href="https://deepuakd.github.io/test.io/Akshara/dream/Dreams.html"><button class="btn">See More</button></a>
               </div>
             </div>
           </div>
